--- a/styles/main2.css
+++ b/styles/main2.css
@@ -1,7 +1,13 @@
 body {
-  background:#999;
+  background: blue;
   font-family: arial;
 }
 h1 {
   color:#555;
+}
+a {
+  color:red;
+}
+li {
+  color:green;
 }
